--- a/css/guia_estils.css
+++ b/css/guia_estils.css
@@ -2,6 +2,7 @@
 
 * {
     font-family: "Barlow Condensed", sans-serif;
+    font-size: 20px;
     margin: 0;
     padding: 0;
 }
@@ -97,27 +98,27 @@ body {
 }
 
 h1 {
-    font-size: 40px;
+    font-size: 50px;
 }
 
 h2 {
-    font-size: 28px;
+    font-size: 40px;
 }
 
 h3 {
-    font-size: 24px;
+    font-size: 30px;
 }
 
 h4 {
-    font-size: 22 px;
+    font-size: 25px;
 }
 
 p {
-    font-size: 20px;
+    font-size: 22px;
 }
 
 a {
-    font-size: 18px;
+    font-size: 20px;
     font-weight: 600;
     text-decoration: none;
     color: #0806a3;
@@ -196,7 +197,7 @@ li {
     margin-right: 20px;
 }
 
-.grande {
+.imagen-grande {
     width: 40%;
     min-width: 500px;
     height: 25%;
@@ -206,7 +207,7 @@ li {
     color: #eee;
 }
 
-.mediana {
+.imagen-pequena {
     width: 20%;
     min-width: 300px;
     height: 150px;
