--- a/css/index.css
+++ b/css/index.css
@@ -1,244 +1,21 @@
-* {
-    padding: 0;
-    margin: 0;
-}
-
-
-/*Elementos flexibles en linea*/
-
-header,
-footer,
-.contenido-principal,
-.header-title,
-.header-navbar,
-.header-navbar li,
-.articulos,
-.formulario,
-.footer-navbar-links,
-.footer-title {
-    display: flex;
-    flex-direction: row;
-}
-
-
-/*Elementos flexibles en columna*/
-
-aside,
-nav,
-main,
-.nav-aside,
-.buscador,
-.footer-contacto {
-    display: flex;
-    flex-direction: column;
-}
-
-
-/*CABECERO DE LA PÁGINA*/
-
-header {
-    padding: 10px;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.header-navbar {
-    align-items: center;
-    padding: 20px;
-}
-
-.publi2 {
-    display: none;
-}
-
-
-/*NAVEGACION Y PUBLICIDAD EN EL CONTENIDO PRINCIPAL*/
-
-#contenido-principal {
-    width: 95%;
-    justify-content: flex-end;
-    margin: 0 auto;
-    text-align: justify;
-}
-
-.nav-aside {
-    width: 25%;
-    min-width: 260px;
-}
-
-nav div,
-.links {
-    margin: 20px auto;
-    text-align: center;
-}
-
-.aside-banner {
-    margin: 20px auto;
-}
-
-
-/*CONTENIDO DEL MAIN*/
-
-main {
-    padding-top: 20px;
-    width: 95%;
-    text-align: justify;
-    min-height: calc(100vh - 200px);
-    margin: 0 auto;
-}
-
-main h2,
-main h3,
-main figure {
-    text-align: center;
-}
-
-article {
-    width: 50%;
-    min-width: 500px;
-    margin: 20px auto;
-}
-
-figure {
-    margin: 20px;
-}
-
-figure img {
-    box-shadow: 2px 3px 3px 3px #000;
-    margin: 10px;
-}
-
-.articulos {
-    width: 95%;
-    margin: 0 auto;
-    flex-wrap: wrap;
-}
-
-
-/*COLOCACIÓN DE LOS ELEMENTOS DEL FOOTER*/
-
-footer {
-    flex-wrap: wrap;
-    justify-content: space-between
-}
-
-.footer-navbar-links {
-    justify-content: space-between;
-    margin: 0 10px;
-}
-
-.footer-title {
-    align-items: center;
-}
-
-.footer-contacto {
-    padding: 5px;
-    align-items: flex-end;
-}
-
-.rosa {
-    background-color: pink;
-}
-
-.verde {
-    background-color: green;
-}
-
-.azul {
-    background-color: blue;
-}
-
-.rojo {
-    background-color: red;
-}
-
-@media (max-width:1530px) {
-    article {
-        width: 90%;
-    }
-    .imagen-grande {
-        min-width: none;
-        width: 90%;
-    }
-}
-
-@media (max-width:1200px) {
-    header {
-        flex-direction: column;
-        align-items: center;
-    }
-    footer {
-        flex-direction: column;
-    }
-    .footer-navbar-links {
-        justify-content: flex-start;
-        margin-left: 15px;
-    }
-    .footer-navbar-links img {
-        margin-left: 15px;
-    }
-    .footer-title {
-        justify-content: center;
-    }
-}
-
-@media (max-width:992px) {
-    header {
-        flex-direction: column;
-    }
-    .header-title {
-        flex-direction: row;
-        width: 100%;
-    }
-    main {
-        width: 100%;
-        margin: 0 auto;
-    }
-    .nav-aside {
-        width: 100%;
-    }
-    .publi1 {
-        display: none;
-    }
-    .contenido-principal {
-        flex-direction: column;
-        margin: 0 auto;
-        width: 100%;
-    }
-    nav {
-        width: 100%;
-    }
-    .links {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-    }
-    .publi2 {
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-    }
-    .footer-contacto {
-        flex-direction: column;
-    }
-    .formulario {
-        margin: 0 auto;
-        width: 100%;
-    }
-}
-
-
-/*
-@media (max-width:768px) {
-    .footer-title {
-        flex-direction: column;
-    }
-    header {
-        flex-direction: column;
-        align-items: center;
-    }
-    .header-navbar {
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-}*/
+  * {
+      padding: 0;
+      margin: 0;
+  }
+  
+  .publi1 {
+      display: none;
+  }
+  
+  .publi2 {
+      display: flex;
+  }
+  
+  @media (min-width:992px) {
+      .publi2 {
+          display: none;
+      }
+      .publi1 {
+          display: flex;
+      }
+  }
